k8s/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: usersvc
spec:
  forwardAuth:
    address: http://authn-svc.usersvc.svc.cluster.local:80/auth/validate
    authResponseHeaders:
      - Authorization
      - X-User-Id
    trustForwardHeader: true
