k8s/authn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authn-deployment
  namespace: usersvc
  labels:
    app: authn
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: authn
  template:
    metadata:
      labels:
        app: authn
    spec:
      containers:
        - name: authn-container
          image: leokot/authn-service:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
