k8s/authn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authn-svc
  namespace: usersvc
  labels:
    app: authn
spec:
  selector:
    app: authn
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: 8081
      protocol: TCP
