k8s/traefik-router.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: router
  namespace: usersvc
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`arch.homework`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: authn-svc
          port: 80
    - match: Host(`arch.homework`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: user-svc-svc
          port: 80
      middlewares:
        - name: auth-middleware
          namespace: usersvc
